[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/gui/tether_well.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/GUIFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://src/screen_menu/ScreenMenu.gd" type="Script" id=3]
[ext_resource path="res://assets/audio/Select 3.wav" type="AudioStream" id=4]
[ext_resource path="res://src/Button.tscn" type="PackedScene" id=5]

[node name="ScreenMenu" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.297302
margin_bottom = -0.297302
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 112.0
margin_top = 40.0
margin_right = 368.0
margin_bottom = 280.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CenterContainer/VBoxContainer"]
margin_right = 256.0
margin_bottom = 140.0
rect_min_size = Vector2( 256, 140 )
texture = ExtResource( 1 )
stretch_mode = 6

[node name="Play" type="Button" parent="CenterContainer/VBoxContainer"]
visible = false
margin_top = 144.0
margin_right = 256.0
margin_bottom = 165.0
focus_mode = 0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.937255, 0.976471, 0.839216, 1 )
custom_colors/font_color_hover = Color( 0.729412, 0.313726, 0.266667, 1 )
enabled_focus_mode = 0
text = "Play"
flat = true
expand_icon = true

[node name="Continue" parent="CenterContainer/VBoxContainer" instance=ExtResource( 5 )]

[node name="LevelSelect" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 169.0
margin_right = 256.0
margin_bottom = 190.0
focus_mode = 0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_disabled = Color( 0.478431, 0.109804, 0.294118, 1 )
custom_colors/font_color = Color( 0.937255, 0.976471, 0.839216, 1 )
custom_colors/font_color_hover = Color( 0.729412, 0.313726, 0.266667, 1 )
enabled_focus_mode = 0
text = "Level Select"
flat = true
expand_icon = true

[node name="Options" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 194.0
margin_right = 256.0
margin_bottom = 215.0
focus_mode = 0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.937255, 0.976471, 0.839216, 1 )
custom_colors/font_color_hover = Color( 0.729412, 0.313726, 0.266667, 1 )
enabled_focus_mode = 0
text = "Options"
flat = true
expand_icon = true

[node name="About" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 219.0
margin_right = 256.0
margin_bottom = 240.0
focus_mode = 0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.937255, 0.976471, 0.839216, 1 )
custom_colors/font_color_hover = Color( 0.729412, 0.313726, 0.266667, 1 )
enabled_focus_mode = 0
text = "Credits"
flat = true
expand_icon = true

[node name="ClickAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
[connection signal="pressed" from="CenterContainer/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Continue" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/LevelSelect" to="." method="_on_Level_Select_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/About" to="." method="_on_About_pressed"]
